# rusted_pixels

./: Cargo.toml
src/: color.rs  gl_ext.rs  glium_ext.rs  glium_gtk.rs  image_ext.rs  input.rs  macros.rs  main.rs  state.rs  util.rs  vertex.100.glsl  vertex.110.glsl  vertex.140.glsl  widget_impl.rs  windows.rs  x11_keymap.rs
src/shaders/: draw.140.frag.glsl  draw.140.vert.glsl  image_area.100.frag.glsl  image_area.100.vert.glsl  image_area.110.frag.glsl  image_area.110.vert.glsl  image_area.140.frag.glsl
