[package]
name = "rusted_pixels"
version = "0.1.0"
authors = ["Jesper Fridefors <jesper.fridefors@gmail.com>","Lolirofle <lolipopple@hotmail.com>"]

[dependencies]
epoxy = "*"
image = "*"
gdk = "*"
gl = "*"
glium = "*"
libc = "*"
shared_library = "*"

[dependencies.gtk]
version = "*"
features = ["v3_16"]

[dependencies.png]
git = "https://github.com/Lolirofle/image-png"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
