[package]
name = "rusted_pixels"
version = "0.1.0"
authors = ["Jesper Fridefors <jesper.fridefors@gmail.com>","Lolirofle <lolipopple@hotmail.com>"]

[dependencies]
epoxy = "*"
image = "*"
gdk = "*"
gdk-sys = "*"
gl = "*"
glium = "*"
shared_library = "*"

[dependencies.gtk]
version = "*"
features = ["v3_16"]
